--- a/pom.xml
+++ b/pom.xml
@@ -16,15 +16,15 @@
 
   <dependencies>
     <dependency>
-	<groupId>org.jfree</groupId>
-	<artifactId>jfreechart</artifactId>
-	<version>1.0.15</version>
-    </dependency>
-    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.4</version>
     </dependency>
   </dependencies>
 </project>
